force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/bt_stripe__Stripe_Currency_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Currency Setting</label>
    <pluralLabel>Stripe Currency Settings</pluralLabel>
</CustomObject>