force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__ISO_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__ISO_Number__c</fullName>
    <label>ISO Number</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>