force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Minor_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Minor_Name__c</fullName>
    <label>Minor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>