force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Minor_Symbol__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Minor_Symbol__c</fullName>
    <label>Minor Symbol</label>
    <length>5</length>
    <type>Text</type>
</CustomField>