force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Minor_Unit__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Minor_Unit__c</fullName>
    <label>Minor Unit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>