force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Rate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Rate__c</fullName>
    <label>Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>