force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Stripe_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Minimum_Amount__c</fullName>
    <label>Stripe Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>