force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Stripe_Supported_Cards__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Supported_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Supported Cards</label>
    <type>Checkbox</type>
</CustomField>