force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/fields/bt_stripe__Stripe_Unsupported_on_American_Express__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Unsupported_on_American_Express__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Unsupported on American Express</label>
    <type>Checkbox</type>
</CustomField>