force-app/main/default/objects/bt_stripe__Stripe_Currency_Setting__mdt/listViews/bt_stripe__All_Currencies.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All_Currencies</fullName>
    <columns>MasterLabel</columns>
    <columns>bt_stripe__ISO_Code__c</columns>
    <columns>bt_stripe__Major_Symbol__c</columns>
    <columns>bt_stripe__Minor_Unit__c</columns>
    <columns>bt_stripe__Stripe_Minimum_Amount__c</columns>
    <columns>bt_stripe__Stripe_Supported_Bank_Accounts__c</columns>
    <columns>bt_stripe__Stripe_Supported_Cards__c</columns>
    <columns>bt_stripe__Stripe_Unsupported_on_American_Express__c</columns>
    <columns>bt_stripe__Stripe_Zero_Decimal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Currencies</label>
</ListView>